fix: Improve OAuth error handling and add configuration guide
- Add friendly error message for unconfigured OAuth providers
- Add NEXT_PUBLIC_ENABLE_OAUTH env var to hide OAuth buttons
- Create comprehensive Google OAuth setup guide
- Update README with OAuth configuration steps
- Improve error handling in auth modal

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ BLTCY_API_KEY=your_api_key_here
 # Get these from your Supabase project settings > API
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+
+# OAuth Configuration (optional)
+# Set to "false" to hide OAuth buttons if not configured
+# NEXT_PUBLIC_ENABLE_OAUTH=true
